# AI-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Section-A.md  chat_with_agent.py  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18e911a979ba_initial_schema.py
app/: seed_superadmin.py
app/ai/: agent.py  handleDB.py  history_cache.py  prompt.py  state.py
app/ai/nodes/: planner_node.py  preparation_node.py  response_node.py  tool_node.py
app/ai/schemas/: graph_schema.py  tools_schema.py
app/ai/tools/: tools.py
app/config/: db.py  logging.py
app/models/: __init__.py  accountModels.py  chatModels.py  userModels.py
app/routes/: chatRoute.py
app/tests/: test_planner.py  test_response.py  test_routes.py  test_tools.py
