[project]
name = "ai-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.15",
    "langgraph>=1.1.8",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.39.0",
]
